--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https://Jove-06.github.io/web-crypto-market/ ",
+  "homepage": "http://Jove-06.github.io/web-crypto-market ",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
