--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,15 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "homepage": "https://Jove-06.github.io/",
+  "homepage": "https://Jove-06.github.io/web-crypto-market",
   "private": true,
   "dependencies": {
+    "@natscale/react-calendar": "^0.0.0-beta.23",
+    "@syncfusion/ej2-react-calendars": "^20.1.52",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap-icons": "^1.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
